# Scaler-hackathon

./: .gitignore  Blog.MD  Dockerfile  ENV_REVIEW.md  README.md  RUN_HANDOFF.md  _tmp_cache_smoke.py  baseline_scores.json  capture_replay.py  eval_policy.py  eval_policy_http.py  inference.py  openenv.yaml  plot_training_curves.py  pyproject.toml  record_qwen_run.py  reward_audit.json  reward_audit.py  smoke_test.py  submission_check.py  train_grpo.py
docs/: EMERGENCE_FIRST_MODELING_SPEC.md  ENVIRONMENT_CONTRACT_FREEZE.md  ENVIRONMENT_DYNAMICS_SPEC.md  ENVIRONMENT_IMPLEMENTATION_PLAN.md  FIRE_FACTOR_VALIDATION.md  HACKATHON_REQUIREMENTS_CONTEXT.md  PROJECT_CONTEXT.md  REWARD_AUDIT_HARNESS.md  round-1-problem-statement.md
notebooks/: wildfire_eval_plots_hf.ipynb  wildfire_grpo_minimal_colab.ipynb  wildfire_grpo_train_hf.ipynb  wildfire_http_eval_hf.ipynb  wildfire_train_eval_hf.ipynb  wildfire_training_eval_hf.ipynb  wildfire_untrained_eval_kaggle.ipynb
replays/: heuristic_hard_9.json  untrained_hard_9.json
server/: __init__.py  app.py
submission_artifacts/: README.md  _make_eval_plot.py  eval_trained.json  eval_untrained.json  training_summary.md
tests/: test_regressions.py
tests/fixtures/: sample_train_log.jsonl
tests/fixtures/submission_repo/: README.md  openenv.yaml
wildfire_env/: README.md  __init__.py  client.py  models.py  pyproject.toml  test_env_smoke.py  test_sim.py  trace_episode.py
wildfire_env/server/: Dockerfile  __init__.py  app.py  fire_simulation.py  requirements.txt  resources.py  terrain.py  wildfire_env_environment.py
